# fast_deploy_llm

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
api/: endpoints.py
api/dependencies/: admin_auth.py  auth.py
api/routes/: admin.py  openai_bedrock.py
config/: .env.example  __init__.py  bedrock.py  env.py  settings.py
core/: __init__.py  bedrock.py  key_store.py  usage_log.py
deploy/: certbot-init.sh  certbot-renew.sh  fast-deploy-llm.service  llm-deploy.service
deploy/nginx/: fast-deploy-llm.conf  llm-deploy.conf
models/: __init__.py  chat.py
scripts/: deploy.sh  test.sh  test_endpoint.sh
